  * uscan: mangle http://sf.net/ to use Filippo's sf.php script and work
    (closes: #242884)
  * uscan: handle tar.bz2 packages (related to #317331)
  * uupdate: handle dpkg 1.13 source format allowing bz2-compressed files
    and .debian.tar.gz files (closes: #317331)
  * wnpp-alert: accept -h and -v short options (closes: #304240)
  * wnpp-alert: don't cache such small files (closes: #309802)

  [ Joshua Kwan ]
  * Add a new script whodepends, written by Moshe Zadka, to check
    which maintainers' packages depend on a particular package.
    closes: #175832 (longstanding, huh?)

  [ Filippo Giunchedi ]
  * debdiff: handle .udeb files if found in .changes (closes: #215477)
  * debchange: add support for forcing a lower version
    (-b/--force-bad-version) (closes: #251436, #183424)
  * debsign: support for signing .commands files (Closes: #224523)
  * added annotate.sh and annotate.1

  [ Joey Hess ]
  * debchange: support generating multi-developer changelogs, currently only
    supporting the format used in this changelog. If multiple developers are
    detected it will automatically add [ Full Name ] lines to disambiguate who
    did what.
  * debdiff: fix debdiff of dsc files to work with new dpkg-dev.
    Closes: #313293, #314811
  * Add debcommit, a script to commit to svn (or cvs) based on the contents of
    the changelog, and svnpath, which it uses to generate svn tags.
    Closes: #316577
  * debchange: Don't allow --closes in --news mode.
  * debchange: In --news mode, don't include "* Non-maintainer upload."
    entries
  * debchange: In --news mode, separate each new entry with a blank line
    and do not add bullets, to encourage not writing NEWS files like changelog
    files. Closes: #316660
  * debchange: Add --release-heuristic and DEBCHANGE_RELEASE_HEURISTIC
    options to control how it tells if a package was released.
  * debchange: Add new "changelog" release heuristic, which looks