@@ -22,6 +22,8 @@ devscripts (2.8.15) UNRELEASED; urgency=low
     and .debian.tar.gz files (closes: #317331)
   * wnpp-alert: accept -h and -v short options (closes: #304240)
   * wnpp-alert: don't cache such small files (closes: #309802)
+  * wnpp-alert: check help_requested file and handle packages with no
+    descriptions (closes: #318737)
 
   [ Joshua Kwan ]
   * Add a new script whodepends, written by Moshe Zadka, to check
